--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #143283f5;
 }
 .navbar .max-width{
     display: flex;
@@ -137,7 +137,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #143283f5;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -198,7 +198,7 @@ section .title::after{
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: #143283f5;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
@@ -242,7 +242,7 @@ section .title::after{
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #143283f5;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -281,7 +281,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background: #143283f5;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -321,7 +321,7 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background: #143283f5;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
@@ -360,7 +360,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background:#143283f5;
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -380,7 +380,7 @@ section .title::after{
 
 /* teams section styling */
 .teams .title::after{
-    content: "who with me";
+    content: "what i did";
 }
 .teams .carousel .card{
     background: #222;
@@ -391,7 +391,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: crimson;
+    background: #143283f5;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -438,7 +438,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #143283f5!important;
 }
 
 /* contact section styling */
@@ -528,7 +528,7 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
+  background: #143283f5;
   border: 2px solid crimson;
   transition: all 0.3s ease;
 }
